gccida/c3/gen_subprogram_die
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10652:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10658:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v19; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10678:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v39; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10684:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v45; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10687:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10688:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10694:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v55; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10697:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v58; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10715:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10736:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v97; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10741:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v102; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10746:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v107; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:10921:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:11040:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:11526:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/dwarf2out.c:11694:42: error: use of undeclared identifier 'off_684265'
sprintf( v114, "*.%s%u", ( const char *)&off_684265, current_funcdef_number); 
                                         ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
